# hermes-mail

./: .gitignore  Cargo.toml
crates/cli/: Cargo.toml
crates/cli/src/: cmd.rs  logging.rs  main.rs
crates/cli/src/cmd/: config.rs
crates/csv/: Cargo.toml
crates/csv/src/: lib.rs
crates/mailer/: Cargo.toml
crates/mailer/src/: data.rs  lib.rs  queue.rs  stats.rs  unblock_imap.rs  websocket.rs
crates/mailer/src/queue/: task.rs
examples/: config.example.toml  html_message.example.html  receivers.example.csv  senders.example.csv  text_message.example.txt
