[package]
name = "hermes-cli"
version = "0.1.0"
edition = "2021"
description.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
console = "0.15.8"
dialoguer = "0.11.0"
hermes-mailer = { path = "../mailer" }
hermes-csv = { path = "../csv" }
tracing = "0.1.40"
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.18", features = ["json", "chrono"] }
lettre = { version = "0.11.7" }
