[package]
name = "hermes-csv"
version = "0.1.0"
edition = "2021"
authors.workspace = true
description = "A library to help with csv conversions into the hermes format"
homepage.workspace = true
repository.workspace = true
categories.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
csv = "1.3.0"
hermes-mailer = { path = "../mailer" }
lettre = { version = "0.11.6", features = ["serde"] }
serde = "1.0.198"
serde_json = "1.0.117"
tracing = "0.1.40"
