[package]
name = "hermes-mailer"
version = "0.1.0"
edition = "2021"
description = "The core SMTP mailer library that powers Hermes"
authors.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
chrono = "0.4.37"
console = "0.15.8"
csv = "1.3.0"
handlebars = "5.1.2"
indicatif = "0.17.8"
lettre = { version = "0.11.6", features = ["serde"] }
markdown = "0.3.0"
rand = "0.8.5"
rayon = "1.10.0"
serde = { version = "1.0.197", features = ["derive", "rc"] }
thiserror = "1.0.58"
tracing = "0.1.40"
tracing-indicatif = "0.3.6"
tracing-subscriber = "0.3.18"
