[package]
name = "hermes-mailer"
version = "0.1.0"
edition = "2021"
description = "The core SMTP mailer library that powers Hermes"
authors.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
chrono = "0.4.37"
console = "0.15.8"
crossbeam-channel = "0.5.13"
csv = "1.3.0"
futures = "0.3.30"
futures-channel = "0.3.30"
futures-util = "0.3.30"
handlebars = "5.1.2"
imap = "2.4.1"
indicatif = "0.17.8"
lettre = { version = "0.11.6", features = ["serde"] }
markdown = "0.3.0"
native-tls = "0.2.12"
rand = "0.8.5"
rayon = "1.10.0"
serde = { version = "1.0.197", features = ["derive", "rc"] }
serde_json = "1.0.117"
thiserror = "1.0.58"
tokio = { version = "1.38.0", features = ["full"] }
tokio-tungstenite = "0.23.0"
tracing = "0.1.40"
tracing-indicatif = "0.3.6"
tracing-subscriber = "0.3.18"
